# tasker

./: .goosehints  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: jj-option-b.md
recipes/: recipe-dev.yaml  recipe-qa.yaml
src/tasker/: __init__.py  __main__.py  goose.py  jj.py  log.py  main.py  models.py  monitoring.py  orchestrator.py  parser.py  ui.py
src/tasker/vcs/: __init__.py  git_backend.py  jj_backend.py
tests/: test_dryrun.py
tests/fixtures/: e2e_test.iterations.jsonl  e2e_test.md  sample_tasks.md  subphase_tasks.md
