[project]
name = "tasker"
version = "0.1.0"
description = "Goose-based task orchestration CLI with QA/Dev feedback loop"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0.0",
]

[project.scripts]
tasker = "tasker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasker"]
